--- a/css/styles.css
+++ b/css/styles.css
@@ -517,7 +517,16 @@ display: flex;
   margin-top: 0;
   margin-bottom: 0;
 }
+.team-img {
+  display: block;
+}
+.img{
+display: block;
+}
 
+img {
+  display: block;
+}
 .team-list>.item:not(:nth-last-child(-n + 1)) {
   margin-right: 30px;
 }
@@ -530,7 +539,7 @@ display: flex;
   border-radius: 0px 0px 4px 4px;
 }
 
-.team-list .title {
+.team-list .title-img {
   margin-top: 0;
   margin-bottom: 10px;
 
@@ -578,11 +587,17 @@ display: flex;
   letter-spacing: 0.03em;
 }
 
+.portfolio-list .item:hover {
+box-shadow: 0px 1px 1px rgba(0, 0, 0, 0.12),
+0px 4px 4px rgba(0, 0, 0, 0.06),
+1px 4px 6px rgba(0, 0, 0, 0.16);
+}
 .portfolio-list .item {
   width: 370px;
   margin-right: 0;
   margin-bottom: 0;
   border: 1px solid var(--border-portfolio-color);
+  
 }
 
 .portfolio-list .item:not(:nth-child(3n)) {
@@ -629,7 +644,7 @@ display: flex;
   color: var(--primary-text-color);
 }
 
-.text-img{
+.team-list .text-img{
   font-family: 'Roboto';
   font-weight: 400;
   font-size: 16px;
@@ -696,7 +711,7 @@ font-family: 'Roboto';
 
 .button.secondary {
   background-color: var(--button-navigation-color);
-  /* color: var(--button-word-color); */
+  color: var(--title-text-color);
   display: flex;
   display: inline-block;
   text-decoration: none;
