--- a/css/styles.css
+++ b/css/styles.css
@@ -442,6 +442,7 @@ display: flex;
 .social-list {
   display: flex;
   justify-content: center;
+  margin-top: 16px;
 }
 
 .social-list .item+.item {
